--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sport_good">
+    package="com.example.LetsGym">
 
     <application
         android:allowBackup="true"
@@ -10,19 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sport_Good">
         <activity
-            android:name=".BasicInformation"
+            android:name="com.example.LetsGym.SetDevice"
             android:exported="false" />
         <activity
-            android:name=".MenuActivity"
+            android:name="com.example.LetsGym.BasicInformation"
             android:exported="false" />
         <activity
-            android:name=".ConditionMenu"
+            android:name="com.example.LetsGym.MenuActivity"
             android:exported="false" />
         <activity
-            android:name=".LetsGymMenu"
+            android:name="com.example.LetsGym.ConditionMenu"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.LetsGym.LetsGymMenu"
+            android:exported="false" />
+        <activity
+            android:name="com.example.LetsGym.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
